# aicrm

./: .env  .env.example  .gitignore  .pylintrc  =0.29.0  =8.2.0  AUDIT_COMMERCIAL_LAUNCH.md  AVITO_OAUTH_README.md  CAMPAIGN_AI_README.md  Dockerfile  PERFORMANCE_COMPLETION_REPORT.md  README.md  README_SERVICE.md  REGISTRATION_UPDATE_README.md  TESTING_README.md  TODO.md  add_extra_data_to_tasks.py  aicrm.service  alembic.ini  asset-manifest.json  avito.md  change_igor_password.py  check_api_endpoints.py  check_db.py  check_user_fields.py  create_admin_user.py  create_ai_settings_table.py  create_automation_logs_table.py  create_campaigns_table.py  create_email_templates_table.py  create_missing_indexes.sql  create_superuser.py  create_telegram_settings_table.py  create_test_user_igor.py  create_user_company_migration.py  database_migration.sql  database_plugin_migration.sql  deploy.sh  docker-compose.prod.yml  fix_enum_migration.py  (+48 more)
alembic/: env.py
backend/: add_extra_data_to_tasks.py  create_admin_user.py  create_ai_settings_table.py  create_automation_logs_table.py  create_campaigns_table.py  create_email_templates_table.py  create_performance_indexes.sql  create_system_settings_table.sql  create_telegram_settings_table.py  init_db.py  locustfile.py  migrate_pydantic.py  package.json  performance_final_report.md  performance_report.md  pyproject.toml  stubs_and_todos.py  test_auth.py  test_telegram_webhook.py  update_email_templates.py
backend/scripts/: analyze_performance.py
backend/src/aicrm/: main.py
backend/src/aicrm/api/: dependencies.py
backend/src/aicrm/api/routers/: __init__.py  ai.py  ai_manager.py  ai_settings.py  auth.py  automation.py  avito.py  campaign.py  catalog.py  communication.py  customer.py  email.py  email_templates.py  order.py  organization.py  plugin.py  production.py  system_settings.py  task.py  telegram.py  user.py  websocket.py  workflow.py
backend/src/aicrm/api/schemas/: ai.py  ai_manager.py  auth.py  automation.py  avito.py  campaign.py  communication.py  email.py  plugin.py  task.py  workflow.py
backend/src/aicrm/config/: openrouter_models.py
backend/src/aicrm/domain/: __init__.py
backend/src/aicrm/models/: __init__.py  ai_prompt.py  ai_settings.py  ai_usage.py  automation.py  automation_log.py  base.py  campaign.py  category.py  communication.py  customer.py  email_settings.py  email_template.py  order.py  organization.py  plugin.py  product.py  service.py  system_settings.py  task.py  telegram_settings.py  user.py
backend/src/aicrm/monitoring/: __init__.py  database_monitor.py
backend/src/aicrm/services/: ai_prompt_service.py  ai_settings_service.py  ai_usage_service.py  auth.py  avito_background_tasks.py  avito_handler.py  avito_service.py  cache_service.py  cached_customer_service.py  calendar_service.py  communication_service.py  customer.py  email_service.py  email_template_service.py  event_notification_service.py  external_api_service.py  health_service.py  metrics_service.py  notification_service.py  organization_service.py  product_service.py  production.py  rate_limit_service.py  service_service.py  session_service.py  sms_service.py  system_settings_service.py  task.py  telegram_bot_service.py  telegram_order_service.py  user.py  workflow_engine.py
backend/src/aicrm/services/ai/: intent_service.py
backend/src/aicrm/services/automation/: analytics_service.py  automation_log_service.py  automation_service.py  avito_integration.py  avito_robot_actions.py  error_handler.py  robot_service.py
backend/src/aicrm/services/plugin/: example_plugins.py  plugin_interfaces.py  plugin_manager.py  sandbox_executor.py
backend/src/aicrm/tests/: conftest.py  test_ai_settings_service.py  test_analytics_service.py  test_api_ai.py  test_api_ai_manager.py  test_api_auth.py  test_api_avito.py  test_api_customers.py  test_api_email.py  test_api_orders.py  test_api_tasks.py  test_api_telegram.py  test_automation_api.py  test_avito.py  test_avito_automation.py  test_avito_messenger.py  test_avito_task_integration.py  test_core_services.py  test_customer_service.py  test_email.py  test_error_handler.py  test_error_handler_notifications.py  test_integration.py  test_integration_services.py  test_models.py  test_notification_service.py  test_robot_service.py  test_runner.py  test_schemas.py  test_services.py  test_telegram_bot.py  test_telegram_bot_service.py  test_trigger_service.py
backend/src/aicrm/utils/: crypto.py  logging.py
(+316 files in other folders)
