[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicrm"
version = "0.1.0"
description = "AI-powered CRM system"
authors = [{name = "AI CRM Team"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "celery>=5.3.0",
    "apscheduler>=3.10.0",
    "structlog>=23.0.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-distro>=0.43b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "testcontainers>=3.7.0",
    "python-telegram-bot>=20.0",
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "twilio>=8.0.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tenacity>=8.2.0",
    "python-json-logger>=2.0.0",
    "structlog>=23.0.0",
    "spacy>=3.7.0",
    "transformers>=4.35.0",
    "scikit-learn>=1.3.0",
    "torch>=2.1.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["src/aicrm/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/aicrm --cov-report=html --cov-report=term"
