[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicrm"
version = "0.1.0"
description = "AI-powered CRM system"
authors = [{name = "AI CRM Team"}]
dependencies = [
    # Core Framework & API
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database & ORM
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.2",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",

    # AI & ML интеграции
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",

    # External API интеграции
    "redis>=5.0.0",
    "python-telegram-bot>=20.0",
    "twilio>=8.0.0",
    "celery>=5.3.0",

    # Email & Communications
    "aiosmtplib>=3.0.0",
    "email-validator>=2.1.0",
    "jinja2>=3.1.0",

    # Background Tasks & Scheduling
    "apscheduler>=3.10.0",

    # Monitoring & Observability
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "opentelemetry-distro>=0.42b0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",

    # Utilities
    "aiofiles>=23.0.0",
    "python-dateutil>=2.8.2",
    "python-ulid>=2.0.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "testcontainers>=3.7.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["src/aicrm/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
